# bupt_rc_cv_cameras

./: CMakeLists.txt  README.md  client.cpp  config.yaml  package.xml  publisher.cpp  subscriber.cpp
.cache/clangd/index/: camears.cpp.6F84929C6B7F1331.idx  cameras.h.113D762E5B38EF56.idx  cameras.hpp.531AA6EBE9750BE4.idx  client.cpp.C9C5F865ED27372F.idx  hikcam.hpp.3756F43507657A45.idx  main.cpp.152928C8F74751C5.idx  publisher.cpp.89D04FFDA81A6A53.idx  subscriber.cpp.F2F9FDDFA89F482C.idx
include/: cameras.h  cameras.hpp
src/: camears.cpp
